RESOLVED FIXED60512
REGRESSION (r84706): Crazy rendering of vimeo.com after exiting fullscreen video
https://bugs.webkit.org/show_bug.cgi?id=60512
Summary REGRESSION (r84706): Crazy rendering of vimeo.com after exiting fullscreen video
Jer Noble
Reported 2011-05-09 15:39:15 PDT
After exiting fullscreen video on vimeo.com the page renders very crazily.
Attachments
Screen shot (164.72 KB, image/png)
2011-05-09 15:42 PDT, Jer Noble
no flags
Patch (1.33 KB, patch)
2011-05-09 15:52 PDT, Jer Noble
simon.fraser: review+
webkit-ews: commit-queue-
Jer Noble
Comment 1 2011-05-09 15:39:26 PDT
Jer Noble
Comment 2 2011-05-09 15:42:14 PDT
Created attachment 92869 [details] Screen shot
Jer Noble
Comment 3 2011-05-09 15:52:13 PDT
Early Warning System Bot
Comment 4 2011-05-09 16:00:03 PDT
Jer Noble
Comment 5 2011-05-09 16:06:17 PDT
Ack, forgot to wrap the initializer in #if ENABLE(FULLSCREEN_API). Will do before checking in.
Jer Noble
Comment 6 2011-05-09 16:41:15 PDT
Ademar Reis
Comment 7 2011-05-10 13:24:16 PDT
Revision r86105 cherry-picked into qtwebkit-2.2 with commit 349bbeb <http://gitorious.org/webkit/qtwebkit/commit/349bbeb>
Note You need to log in before you can comment on or make changes to this bug.