2011-05-09  Jeremy Noble  <jer.noble@apple.com>

Reviewed by Simon Fraser.

        REGRESSION (r84706): Crazy rendering of vimeo.com after exiting fullscreen video
        https://bugs.webkit.org/show_bug.cgi?id=60512

        Initialize m_containsFullScreenElement.

        * html/HTMLFrameElementBase.cpp:
        (WebCore::HTMLFrameElementBase::HTMLFrameElementBase):

Canonical link: https://commits.webkit.org/75778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86105 268f45cc-cd09-0410-ab3c-d52691b4dbfc